Update Functions and Methods.ipynb

--- a/Functions and Methods.ipynb
+++ b/Functions and Methods.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Functions and Methods Homework Solutions\n",
+    "# Functions and Methods \n",
     "____\n",
     "**Write a function that computes the volume of a sphere given its radius.**"
    ]
